2007-04-21  Vitaly Alexeev <tishka92@yahoo.com>

	* gameswf/gameswf_action.cpp: fixed action_buffer::execute(), 
	Flash keeps local variables after executing of frame actions therefore we should not delete them
	* gameswf/gameswf_sprite.*,
	* gameswf/gameswf_dlist.*,
	* gameswf/gameswf_as_sprite.*: added getNextHighestDepth() sprite method

2007-04-19  Vitaly Alexeev <tishka92@yahoo.com>

	* gameswf/gameswf_button.cpp: button on_event() must protect parent
	from deleting just as 'this'

2007-04-19  Vitaly Alexeev <tishka92@yahoo.com>

	* gameswf/gameswf_action.*: fixed local var bug,
	Semantics Flash Action Script differs from semantics C++,
	get_variables() & set_variables() search for local vars in all environment
	declare_local() & set_local() search for local vars up to barrier of environment
	* gameswf/samples/test_local_var.*: added testcase
	* gameswf/gameswf_as_classes/as_mcloader.cpp: cleanup

2007-04-17  Vitaly Alexeev <tishka92@yahoo.com>

	* gameswf/gameswf_action.cpp: fixed one of the memory leaks bug

2007-04-17  Vitaly Alexeev <tishka92@yahoo.com>

	* gameswf/gameswf_impl.cpp,
	* gameswf/gameswf_sprite.cpp,
	* gameswf/as_classes/as_mcloader.cpp: cleanup

2007-04-17  Vitaly Alexeev <tishka92@yahoo.com>

	* gameswf/gameswf_text.cpp: applied the patch from Francois Guibert
	(fixed the cursor position with centered texts)

2007-04-17  Vitaly Alexeev <tishka92@yahoo.com>

	* gameswf/a lot of files: removed struct movie()
	it's just an artifact of the code's history.

2007-04-15  Thatcher Ulrich <tu@tulrich.com>

	Make things more straightforward for embedders who don't want http
	support linked into gameswf.
	
	* base/tu_file.cpp: remove http support -- moved to net/
	* net/tu_net_file.*, net/Makefile: a tu_file that supports
	HTTP (factored out of tu_file)
	* gameswf/gameswf_test_ogl.cpp: add '-n' flag to control whether to allow
	network access or not.  Support http files explicitly via
	file_opener().
	* gameswf/Makefile: misc fixes
